# teardown-mp-patches

./: .gitattributes  .gitignore  .mcp.json  CLAUDE.md  ISSUES_AND_FIXES.md  MASTER_MOD_LIST.md  QUICKSTART.md  README.md  ROLE_API_SURGEON.md  ROLE_DOCS_KEEPER.md  ROLE_MAINTAINER.md  ROLE_MOD_CONVERTER.md  ROLE_QA_LEAD.md  TASK_QUEUE.md  activate_all_local_mods.py  add_toolconfig.py  apply_ui_standards.py  fix_tool_grab.py  gate_options_host.py  generate_watchdog_config.py  launch_team.bat  launch_teardown.vbs  pyproject.toml  requirements-test.txt  requirements.txt  roles.json  watchdog.ps1  watchdog_config.json
.claude/: last-session.md  settings.json
.comms/: FOCUS.md  PROTOCOL.md  TEAMWORK.md  TRIGGERS.md  check_all_inboxes.py  heartbeats.json
archive/: CONSOLIDATION_PLAN.md  CONSOLIDATION_PLAN_V2.md  push.py
dashboard/: index.html  server.py
docs/: AUDIT_REPORT.md  BALLISTICS_FRAMEWORK.md  BASE_GAME_MP_PATTERNS.md  DESYNC_SCAN_RESULTS.md  ECOSYSTEM.md  FIX_PLAN_16_BROKEN_MODS.md  KEYBIND_STANDARDS.md  KNOWN_LIMITATIONS.md  LINT_RULES.md  MPLIB_INTERNALS.md  MP_DESYNC_PATTERNS.md  MP_REFERENCE.md  MP_TESTING_GUIDE.md  MP_TEST_LOG.md  OFFICIAL_DEVELOPER_DOCS.md  PER_TICK_RPC_FIX_GUIDE.md  RESEARCH.md  TEAM_PLUGINS.md  TESTING_SETUP.md  TEST_SHEET.md  UI_STANDARDS.md  UMF_TRANSLATION_GUIDE.md  V2_SYNC_PATTERNS.md  WHAT_DOESNT_WORK.md  WHAT_WORKS.md
hooks/: post_edit_lint.py  post_write_fix_lua.py  pre_edit_guard.py
lib/: def.lua  def_example.lua
mcp_change_tracker/: changes.json  server.py
mcp_lock_server/: server.py  test_lock.py
tests/: conftest.py  (+26 more)
(+13596 files in other folders)
